# AWG_MO

./: AWG_MO.xlsx  pyproject.toml  requirements.txt
examples/: cards.ipynb  data.py  monkeypatch.py  roster.ipynb  simple.ipynb  solutions.py  test.ipynb  whiskas.ipynb
